infra/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sgm-api-staging-service
    namespace: sgm-staging
spec:
    selector:
        app: sgm-api-staging
    ports:
        - protocol: 'TCP'
          port: 8080
          targetPort: 8000
    type: LoadBalancer
