infra/k8s/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress
  namespace: sgm-staging

spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`sgm-staging-api.cloudflow.info`)
    kind: Rule
    services:
    - name: sgm-api-staging-service
      port: 8000

  tls:
    secretName: cloudflow-api-certificate
